# ra-for-studying

./: RA-사용시-주의사항.md  README.md
ALPLED-CORE/: .gitignore  README.md  main.py  requirements.txt
ALPLED-CORE/agents/fine_tuning_agent/: README.md  pyproject.toml  requirements.txt  requirements_gold_error_utils.py  run.py
ALPLED-CORE/agents/fine_tuning_agent/docs/: input_contract.json  output_contract.json  output_sample.json
ALPLED-CORE/agents/fine_tuning_agent/examples/: django_service.py  input_sample.json
ALPLED-CORE/agents/fine_tuning_agent/requirements_gold_agent/: __init__.py  cli.py  config.py  contracts.py  env_loader.py  output_validation.py  pipeline.py  runtime.py  service.py  similarity.py  specification.py  storage.py  task1.py  task2.py  task3.py  utils.py
ALPLED-CORE/api/: approval_review_router.py  download_router.py  generation_router.py
ALPLED-CORE/config/: __init__.py  constants.py  logging_config.py  logging_context.py  prompt_settings.py  settings.py
ALPLED-CORE/database/: __init__.py  base.py  engine.py  session.py
ALPLED-CORE/finetuning/: finetuning.ipynb
ALPLED-CORE/ingest/: build_all.py  ingest_administrative_guideline.py  ingest_public_standard.py  (+5 more)
ALPLED-WEB/: .gitignore  README.md  docker-compose.yml  manage.py  requirements.txt
FT/: 01_QLoRA_3단계_학습_Qwen3VL.ipynb  02. 테스트 생성 코드.ipynb  README.md
config/: navigation-labels.json  ra-output-templates.json
docs/: ra-advanced-features.md  ra-document-types.md  ra-usage-precautions.md
samples/: medical-device-projects.json  ra-seed-projects.json
tests/: test_ra_automation.py
(+642 files in other folders)
